fix: faq and accordian icons, accordian alignment

--- a/src/scss/section/_accordianSection.scss
+++ b/src/scss/section/_accordianSection.scss
@@ -205,8 +205,7 @@
         .accordion-card {
           .card-header {
             background-color: #ffffff;
-            padding: 20px;
-            padding-left: 0px;
+            padding: 20px 0px;
           }
           .accordion-symbol {
             // background-color: #3d9305;
@@ -331,7 +330,7 @@
         .card-header {
           background-color: #ffffff;
           padding: 20px;
-        }
+      }
         .accordion-symbol {
           // background-color: #3d9305;
           border: none;
